@@ -13,6 +13,10 @@
 	signal handler
 	(peditor_select_menu_value_changed): Use
 	gtk_option_menu_set_history
+	(guard_value_changed, gconf_peditor_widget_set_guard): Implement
+	(peditor_string_widget_changed): Work correctly with multiple
+	callback signatures
+	(gconf_peditor_new_string): Use changed signal
 
 2001-12-08  Bradford Hovinen  <hovinen@ximian.com>
 
